Actions
Bug #9135
closedlibresolv2: this statement may fall through
Start date:
2018-02-19
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Issue found by gcc 7 build:
../common/nameser/ns_print.c: In function '__ns_sprintrrf': ../common/nameser/ns_print.c:864:19: error: this statement may fall through [-Werror=implicit-fallthrough=] case ns_t_dhcid: { ^ ../common/nameser/ns_print.c:899:2: note: here case ns_t_ipseckey: { ^~~~ ../common/nameser/ns_print.c:899:22: error: this statement may fall through [-Werror=implicit-fallthrough=] case ns_t_ipseckey: { ^ ../common/nameser/ns_print.c:990:2: note: here case ns_t_hip: { ^~~~ ../common/nameser/ns_ttl.c: In function '__ns_parse_ttl': ../common/nameser/ns_ttl.c:113:18: error: this statement may fall through [-Werror=implicit-fallthrough=] case 'W': tmp *= 7; ~~~~^~~~ ../common/nameser/ns_ttl.c:114:3: note: here case 'D': tmp *= 24; ^~~~ ../common/nameser/ns_ttl.c:114:18: error: this statement may fall through [-Werror=implicit-fallthrough=] case 'D': tmp *= 24; ~~~~^~~~~ ../common/nameser/ns_ttl.c:115:3: note: here case 'H': tmp *= 60; ^~~~ ../common/nameser/ns_ttl.c:115:18: error: this statement may fall through [-Werror=implicit-fallthrough=] case 'H': tmp *= 60; ~~~~^~~~~ ../common/nameser/ns_ttl.c:116:3: note: here case 'M': tmp *= 60; ^~~~ cc1: all warnings being treated as errors
Updated by Electric Monk over 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit d32e0fcacf2171e3119de0a92fb7d86b397d4d69
commit d32e0fcacf2171e3119de0a92fb7d86b397d4d69 Author: Toomas Soome <tsoome@me.com> Date: 2018-02-21T00:57:25.000Z 9135 libresolv2: this statement may fall through Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Reviewed by: Alexander Pyhalov <apyhalov@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions