usr/src/lib/libresolv2/common/nameser/ns_ttl.c
@@ -111,9 +111,13 @@ ns_parse_ttl(const char *src, u_long *dst) {
 			ch = toupper(ch);
 		switch (ch) {
 		case 'W':  tmp *= 7;
+			/* FALLTHROUGH */
 		case 'D':  tmp *= 24;
+			/* FALLTHROUGH */
 		case 'H':  tmp *= 60;
+			/* FALLTHROUGH */
 		case 'M':  tmp *= 60;
+			/* FALLTHROUGH */
 		case 'S':  break;
 		default:   goto einval;
 		}
